--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie": "^1.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.23.25",
+    "framer-motion": "^12.24.0",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
